@@ -24,6 +24,10 @@ CHANGES
     to [ticket:1892] as this was supposed
     to be part of that, this is [ticket:2491].
 
+  - [feature] The 'objects' argument to 
+    flush() is no longer deprecated, as some
+    valid use cases have been identified.  
+
 - engine
   - [bug] Fixed memory leak in C version of
     result proxy whereby DBAPIs which don't deliver
